k8s/1-cert.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pulsio
