k8s/2-cron.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-cron
  namespace: pulsio
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 1m"
    keel.sh/imagePullSecret: "keel-dockerconfig"
    keel.sh/image-tag: "latest"
    keel.sh/match-tag: "true"
    keel.sh/approver: "keel"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: api-cron
  template:
    metadata:
      labels:
        app: api-cron
    spec:
      imagePullSecrets:
        - name: keel-dockerconfig
      containers:
        - name: api-cron
          image: ghcr.io/damianobarbati/pulsio-api-production
          imagePullPolicy: Always
          command: ["pnpm", "-F", "api", "cron"]
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
