k8s/2-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: pulsio
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 1m"
    keel.sh/imagePullSecret: "keel-dockerconfig"
    keel.sh/image-tag: "latest"
    keel.sh/match-tag: "true"
    keel.sh/approver: "keel"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: keel-dockerconfig
      containers:
        - name: api
          image: ghcr.io/damianobarbati/pulsio-api-production
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---

apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: pulsio
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: pulsio
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: pulsio-api-rate-limit@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - api.pulsio.live
      secretName: api-tls
  rules:
    - host: api.pulsio.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-rate-limit
  namespace: pulsio
spec:
  rateLimit:
    period: 1s
    average: 10
    burst: 20

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: web-rate-limit
  namespace: pulsio
spec:
  rateLimit:
    period: 1s
    average: 100
    burst: 200
